--- a/core/templates/registration/signup.html
+++ b/core/templates/registration/signup.html
@@ -1,6 +1,6 @@
-<h2>Member Login</h2>
+<h2>Sign Up</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button type="submit">Create Account</button>
 </form>
