Refactored views and forms to fix broken imports, align model references, and separate ProfileForm from TimeFormSet. Removed rogue {{ form.as_p }} from make_time_for.html. App now runs cleanly and renders correct fields.

--- a/core/templates/core/make_time_for.html
+++ b/core/templates/core/make_time_for.html
@@ -1,6 +1,6 @@
 <h2>What do you want to make time for?</h2>
 
-<form method="post">
+<form method="post" action="{% url 'make_time_for' %}">
   {% csrf_token %}
   {{ formset.management_form }}
   {% for form in formset %}
