not tC:\Users\clint\MakeTime\venv\Scripts\activate.bat

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'core/styles.css' %}">
     <meta charset="UTF-8">
     <title>{% block title %}MakeTime{% endblock %}</title>
 </head>
