--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,9 +1,9 @@
 {% extends 'core/base.html' %}
 {% block content %}
-  <h2>Onboarding</h2>
+  <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Continue</button>
+    <button type="submit">Log In</button>
   </form>
 {% endblock %}
