--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,6 +1,9 @@
+{% extends 'core/base.html' %}
+{% block content %}
 <h2>Member Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
+{% endblock %}
