--- a/core/templates/registration/logout.html
+++ b/core/templates/registration/logout.html
@@ -1,3 +1,4 @@
+{% extends 'core/base.html' %}
 <h2>You’ve logged out</h2>
 <p>Thanks for making time today. Come back soon to keep prioritizing what matters.</p>
 
